[package]
name = "auth"
version = "0.1.0"
edition = "2021"
authors = ["Federico Fusco"]

[dependencies]
thiserror = "1"
chrono = "0.4"
surrealdb = "1.1.1"
argon2 = "0.5.3"
async-trait = "0.1"
dyn-clone = "1"
typetag = "0.2"

[dependencies.jsonwebtoken]
version = "9.2"
features = ["use_pem"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[dependencies.uuid]
version = "1.6.1"
features = ["v4", "fast-rng", "serde"]
